--- a/nextjs-full-stack/styles/globals.css
+++ b/nextjs-full-stack/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+table td, table th {
+  border : 1px solid #555;
+  padding: 0.5em 0.5em 0.4em;
+}
+
+
+.button4 {border-radius: 12px; background-color: #4CAF50;}
